# clear-categorisation-id

./: .coverage  main.py  pyproject.toml  pytest.ini
.bmad-core/: install-manifest.yaml
app/: main.py
app/clients/: __init__.py  sheets.py
app/consumers/: __init__.py  base_consumer.py  scraped_consumer.py
app/core/: cache.py  config.py  database.py  kafka_logging.py  lifecycle.py  logging.py
app/engine/: classifier.py  stream_processor.py
app/models/: requests.py  responses.py  taxonomy.py
app/producers/: __init__.py  base_producer.py  classified_producer.py
app/routers/: admin.py  classify.py
architecture/: 1-system-overview.md  10-quality-testing-strategy.md  11-risk-management-resilience.md  12-future-architecture-evolution.md  13-decision-log.md  14-appendix.md  2-high-level-architecture.md  3-component-architecture.md  4-data-flow-architecture.md  5-technology-stack-dependencies.md  6-scalability-performance.md  7-security-architecture.md  8-deployment-architecture.md  9-monitoring-observability.md  index.md
docs/: architecture.md  prd.md
prd/: 1-summary.md  10-quality-evaluation-metrics.md  11-nonfunctional-requirements.md  12-configuration.md  13-prompting-output-contracts-reference.md  14-testing-strategy.md  15-rollout-plan-milestones.md  16-risks-mitigations.md  17-decisions-open-questions.md  18-appendix.md  2-goals-nongoals.md  3-users-use-cases.md  4-taxonomy-source-of-truth.md  5-functional-requirements.md  6-api-design-fastapi.md  7-kafka-contracts.md  8-model-provider-strategy.md  9-data-storage-retention.md  index.md
(+41 files in other folders)
